2008-09-03  Ingo Renner  <ingo@typo3.org>

	* Added feature #9281: Add a method to easily do a HTTP redirect
	* Declared t3lib_div::readLLPHPfile() and t3lib_div::removeXSS() static

2008-09-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9276: htmlArea RTE: allow wild cards in lists of allowed class names

2008-09-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9261: Indentation set with div section in htmlArea RTE is not rendered correctly in FE
	* Added feature #8668: Configurable labels for formatblock items in htmlArea RTE

2008-09-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8508: String "Important Notice" in About Modules is hardcoded
	* Fixed bug #2222: CSH missing for localization settings of pages (thanks to Christian Kuhn)
	* Fixed bug #9249: Misspelling in Install tool (thanks to Christian Kuhn)
	* Fixed bug #2642: Bug: Directories named 0 break directory listing and you cannnot create a directory with name 0 (thanks to Rob Vonk & Christian Kuhn)

2008-08-30  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9255: External URLs cannot be set in RTEhtmlarea anymore

2008-08-29  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8677: FE login redirect after logout does not work (thanx to Steffen Kamper)
	* Fixed bug #7812: cObj CONTENT should allowed on static_* tables (thanx to Georg Ringer)
	* Fixed bug #6601: fixed mount point issues with the local page tree cache
	* Added feature #6711: Enable stdWrap for the image in imageLinkWrap (thanx to Georg Ringer)
	* Fixed bug #9160: New option "index_metatags" not available in crawler / crawler-hooks (thanx to Christian Trabold)

2008-08-27  Martin Kutschker  <masi@typo3.org>

	* Added feature #9204: Allow icons in select of tt_content CE plugin (list_type; implementation by Steffen Kamper)

2008-08-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #9235: Enable synchronous load of some htmlArea RTE plugins