@@ -139,7 +139,12 @@ class SC_mod_web_ts_index extends t3lib_SCbase {
 			$this->doc->inDocStylesArray[] = '
 				TABLE#typo3-objectBrowser A { text-decoration: none; }
 				TABLE#typo3-objectBrowser .comment { color: maroon; font-weight: bold; }
-
+				TABLE#ts-analyzer tr.c-headLineTable {background-color: #A2AAB8;}
+				TABLE#ts-analyzer tr td {padding: 0 2px;}
+				TABLE#ts-analyzer tr.c-headLineTable td {padding: 2px 4px; font-weight:bold; color: #fff;}
+				.tst-analyzer-options { margin:5px 0; } 
+				.tst-analyzer-options label {padding-left:5px; vertical-align:text-top; }   
+				.bgColor0 {background-color:#fff;}     
 			';
 
 
